fix broken overflow in modal-full

--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -160,6 +160,10 @@
   justify-content: center;
 }
 
+.modal.force-show {
+  overflow: hidden;
+}
+
 .modal-real {
   &.show {
     display: flex !important;
